--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <link rel="shortcut icon" href="/files/logo.svg" type="image/x-icon">
   <link rel="stylesheet" href="/index.css" title="index-style" type="text/css">
-  <link rel="stylesheet" href="/portrait.css" title="portrait-style" type="text/css">
+  <link rel="stylesheet" href="/ppp.css" title="portrait-style" type="text/css">
   <script src="/index.js"></script>
 
   <title>Jorge Souza</title>
