--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         node js, dev express, html, css">
   <!-- #endregion -->
 
-  <link rel="shortcut icon" href="./files/logo.svg" type="image/x-icon">
-  <link rel="stylesheet" href="./index.css" title="index-style">
-  <link rel="stylesheet" href="./portrait.css" title="portrait-style">
-  <script src="./index.js"></script>
+  <link rel="shortcut icon" href="https://www.jorgesouza.com.br/files/logo.svg" type="image/x-icon">
+  <link rel="stylesheet" href="https://www.jorgesouza.com.br/index.css" title="index-style">
+  <link rel="stylesheet" href="https://www.jorgesouza.com.br/portrait.css" title="index-style">
+  <script src="https://www.jorgesouza.com.br/index.js"></script>
 
   <title>Jorge Souza</title>
 </head>
