--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
       <img src="./files/contacts.svg" alt="">
       <span>Contato</span>
     </div>
+    <div id="menu-contacts" class="menu-item" onclick="window.open('https://www.kaatan.com.br')">
+      <img src="./files/ret_branco.svg" alt="">
+      <span>Kaatan</span>
+    </div>
     <span></span>
   </div>
   <!-- #endregion -->
