--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <img src="./files/contacts.svg" alt="">
       <span>Contato</span>
     </div>
-    <div id="menu-kaatan" class="menu-item" onclick="window.open('https://www.kaatan.com.br')" style="display: none;">
+    <div id="menu-kaatan" class="menu-item" onclick="window.open('https://www.kaatan.com.br')">
       <img src="./files/ret_branco.svg" alt="">
       <span>Kaatan</span>
     </div>
