--- a/sample.html
+++ b/sample.html
@@ -74,7 +74,7 @@
             <div class="footer-conteiner">
                 <span class="footer-title">Contato</span>
                 <a class="footer-item" href="mailto:jorge.sos777@outlook.com" target="_blank">Gmail</a>
-                <a class="footer-item" href="https://wa.me/5577991161892" target="_blank">Whatsapp</a>
+                <a class="footer-item" href="https://wa.me/5577999030420" target="_blank">Whatsapp</a>
                 <a class="footer-item" href="https://www.youtube.com/@jorgeoliveiraonline" target="_blank">Youtube</a>
                 <a class="footer-item" href="https://www.instagram.com/jorgeoliveiraonline/"
                     target="_blank">Instagram</a>
@@ -83,7 +83,7 @@
             </div>
             <div class="credit-container">
                 <hr class="js-divider">
-                <img src="./files/logo_amarela.svg" alt="">
+                <img src="./files/logobranca.svg" alt="">
                 <span class="footer-title" id="credit" style="text-align: center;"></span>
                 <script>
                     document.getElementById("credit").innerHTML = `Copyright © ${new Date().getFullYear()} | Jorge Souza Oliveira dos Santos`;
