--- a/index.html
+++ b/index.html
@@ -163,10 +163,10 @@
                     padding: 0;
                 }
             </style>
-            <img src="files/gmail.png" class="social">
-            <img src="files/whatsapp.png" class="social">
-            <img src="files/amazon.png" class="social">
-            <img src="files/Workana.png" class="social">
+            <img src="files/gmail.png" class="social" onclick="window.open('mailto:jorge.sos777@outlook.com')">
+            <img src="files/whatsapp.png" class="social" onclick="window.open('https://wa.me/5577999030420')">
+            <img src="files/amazon.png" class="social" onclick="window.open('https://amazon.com.br/kindle-dbs/entity/author?asin=B0CM13195T')">
+            <img src="files/Workana.png" class="social" onclick="window.open('https://www.workana.com/freelancer/175498bc00eeda4731ad4044f609f5a5')">
         </div>
 
         <div class="js-post banner" id="post">
