--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <img src="./files/learn.svg" alt="">
             <span>Cursos</span>
         </div>
-        <div id="menu-kaatan" class="menu-item" onclick="window.open('https://www.kaatan.com.br')">
+        <div id="menu-kaatan" class="menu-item" onclick="window.open('https://www.kaatan.com.br')" style="display: none;">
             <img src="./files/ret_branco.svg" alt="">
             <span>Kaatan</span>
         </div>
