--- a/index.html
+++ b/index.html
@@ -170,7 +170,8 @@
                 onclick="window.open('https://amazon.com.br/kindle-dbs/entity/author?asin=B0CM13195T')">
             <img src="files/Workana.png" class="social"
                 onclick="window.open('https://www.workana.com/freelancer/175498bc00eeda4731ad4044f609f5a5')">
-            <img src="files/ig.png" class="social" onclick="window.open('https://www.instagram.com/jorgesouzoficial/')">
+            <img src="files/ig.png" class="social" onclick="window.open('https://www.instagram.com/jorgesouzaonline/')">
+            <img src="files/Youtube.png" class="social" onclick="window.open('https://www.youtube.com/@jorgesouzaonline')">
         </div>
 
         <div class="js-post banner" id="post">
