--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <img src="./files/blog.svg" alt="">
             <span>Blog</span>
         </div>
-        <div id="menu-port" class="menu-item" onclick="Renderer.Portfolio(this)">
+        <div id="menu-port" class="menu-item" onclick="Renderer.Portfolio(this)" style="display: none;">
             <img src="./files/notes.svg" alt="">
             <span>Portfólio</span>
         </div>
@@ -40,8 +40,7 @@
             <img src="./files/learn.svg" alt="">
             <span>Cursos</span>
         </div>
-        <div id="menu-kaatan" class="menu-item" onclick="window.open('https://www.kaatan.com.br')"
-            style="display: none;">
+        <div id="menu-kaatan" class="menu-item" onclick="window.open('https://www.kaatan.com.br')" style="display: none;">
             <img src="./files/ret_branco.svg" alt="">
             <span>Kaatan</span>
         </div>
@@ -120,10 +119,8 @@
                 <span class="footer-title">Contato</span>
                 <a class="footer-item" href="mailto:jorge.sos777@outlook.com" target="_blank">Gmail</a>
                 <a class="footer-item" href="https://wa.me/5577999030420" target="_blank">Whatsapp</a>
-                <a class="footer-item" href="https://www.amazon.com.br/stores/author/B0CM13195T"
-                    target="_blank">Amazon</a>
-                <a class="footer-item" href="https://www.workana.com/freelancer/175498bc00eeda4731ad4044f609f5a5"
-                    target="_blank">Workana</a>
+                <a class="footer-item" href="https://www.amazon.com.br/stores/author/B0CM13195T" target="_blank">Amazon</a>
+                <a class="footer-item" href="https://www.workana.com/freelancer/175498bc00eeda4731ad4044f609f5a5" target="_blank">Workana</a>
             </div>
             <div class="credit-container">
                 <hr class="js-divider">
@@ -166,10 +163,8 @@
             </style>
             <img src="files/gmail.png" class="social" onclick="window.open('mailto:jorge.sos777@outlook.com')">
             <img src="files/whatsapp.png" class="social" onclick="window.open('https://wa.me/5577999030420')">
-            <img src="files/amazon.png" class="social"
-                onclick="window.open('https://amazon.com.br/kindle-dbs/entity/author?asin=B0CM13195T')">
-            <img src="files/Workana.png" class="social"
-                onclick="window.open('https://www.workana.com/freelancer/175498bc00eeda4731ad4044f609f5a5')">
+            <img src="files/amazon.png" class="social" onclick="window.open('https://amazon.com.br/kindle-dbs/entity/author?asin=B0CM13195T')">
+            <img src="files/Workana.png" class="social" onclick="window.open('https://www.workana.com/freelancer/175498bc00eeda4731ad4044f609f5a5')">
             <img src="files/ig.png" class="social" onclick="window.open('https://www.instagram.com/jorgesouzaonline/')">
             <img src="files/Youtube.png" class="social" onclick="window.open('https://www.youtube.com/@jorgesouzaonline')">
         </div>
@@ -264,16 +259,12 @@
     <!-- #endregion -->
 
     <!-- #region TOP-BUTTON -->
-    <div id="top-button" title="Voltar para o topo"
-        onclick="window.scrollTo( { top: 0, left: 0, behavior: 'smooth' } )">
-        <svg fill="#ffbb00" width="64px" height="64px" viewBox="-2.4 -2.4 28.80 28.80"
-            xmlns="http://www.w3.org/2000/svg" stroke="#ffbb00" stroke-width="0.00024000000000000003"
-            transform="matrix(1, 0, 0, 1, 0, 0)rotate(0)">
+    <div id="top-button" title="Voltar para o topo" onclick="window.scrollTo( { top: 0, left: 0, behavior: 'smooth' } )">
+        <svg fill="#ffbb00" width="64px" height="64px" viewBox="-2.4 -2.4 28.80 28.80" xmlns="http://www.w3.org/2000/svg" stroke="#ffbb00" stroke-width="0.00024000000000000003" transform="matrix(1, 0, 0, 1, 0, 0)rotate(0)">
             <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
             <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
             <g id="SVGRepo_iconCarrier">
-                <path
-                    d="M5 21h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2zm7-14 5 5h-4v5h-2v-5H7l5-5z">
+                <path d="M5 21h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2zm7-14 5 5h-4v5h-2v-5H7l5-5z">
                 </path>
             </g>
         </svg>
