--- a/aprendizado.html
+++ b/aprendizado.html
@@ -13,19 +13,8 @@
 
 
 <body>
-    <div class="app" id="app">
-        <div class="js-page" id="js-page">
-            <div class="js-post">
-                Redirecionando, aguarde...
-            </div>
-            <!-- Default Elements -->
-            <div class="right-bar"></div>
-            <div class="left-bar"></div>
-            <div class="js-footer"></div>
-        </div>
-    </div>
     <script>
-        window.location = "/?id=cursos";
+        window.location = "/";
     </script>
 </body>
 
