--- a/downloads.html
+++ b/downloads.html
@@ -25,7 +25,7 @@
         </div>
     </div>
     <script>
-        window.location = "/?id=cursos";
+        window.location = "/";
     </script>
 </body>
 
