--- a/blog.html
+++ b/blog.html
@@ -20,7 +20,7 @@
         </div>
     </div>
     <script>
-        window.location = "/?id=blog";
+        window.location = "/";
     </script>
 </body>
 
