--- a/contato.html
+++ b/contato.html
@@ -23,7 +23,7 @@
         </div>
     </div>
     <script>
-        window.location = "/?id=contato";
+        window.location = "/";
     </script>
 </body>
 
