--- a/ia.html
+++ b/ia.html
@@ -23,7 +23,7 @@
         </div>
     </div>
     <script>
-        window.location = "/?id=ia";
+        window.location = "/";
     </script>
 </body>
 
