--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
                 LinkAction: App.Learn
             },
             {
+                LinkTile: "Livros",
+                LinkIcon: "https://kaatan.azurewebsites.net/files/learn.svg",
+                LinkAction: App.Books
+            },
+            {
                 LinkTile: "Comunidade",
                 LinkIcon: "files/chat.svg",
                 LinkAction: App.Community
