--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="informatica, curso, computador, computacao, programação, tecnologia, info,  desenvolvimento, web, design, web design, design grafico, tech,  visual studio, visual studio code, vs code, c#, javascript, dotnet, node js, dev express, html, css">
     <!-- #endregion -->
     <link rel="shortcut icon" href="files/logo.svg" type="image/x-icon">
-    <link rel="stylesheet" href="jorge.css" title="index-style">
+    <link rel="stylesheet" href="jorge.css">
     <script type="module" src="jorge.js"></script>
     <link rel="stylesheet" href="https://kaatan.azurewebsites.net/lib/acacia/acacia.css">
     <script type="module" src="https://kaatan.azurewebsites.net/lib/acacia/acacia.js"></script>
