--- a/livros.html
+++ b/livros.html
@@ -70,6 +70,6 @@
         ProfileSection: {}
     }
     // new Acacia(appName, hideBottomBar, sideMenuContent, callback)
-    const acacia = new Acacia("COMUNIDADE | Jorge Souza", true, sideMenu, () => { App.Main(App.Community) });
+    const acacia = new Acacia("LIVROS | Jorge Souza", true, sideMenu, () => { App.Main(App.Books) });
 
 </script>
