--- a/livros.html
+++ b/livros.html
@@ -12,6 +12,7 @@
     <script type="module" src="jorge.js"></script>
     <link rel="stylesheet" href="https://kaatan.azurewebsites.net/lib/acacia/acacia.css">
     <script type="module" src="https://kaatan.azurewebsites.net/lib/acacia/acacia.js"></script>
+    <title></title>
 </head>
 
 <body></body>
